--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+* {
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
   background-color: hsl(0, 0%, 98%);
