--- a/src/components/Body/Body.css
+++ b/src/components/Body/Body.css
@@ -14,6 +14,7 @@
   margin: 50px;
   cursor: pointer;
   transition: transform ease-in-out 3.5s;
+  overflow-y: auto;
 }
 
 .myCards:hover {
@@ -44,6 +45,7 @@
   align-items: center;
   justify-content: center;
   background-color: hsl(209, 23%, 17%);
+  overflow-y: auto;
 }
 
 .cardCon {
@@ -54,6 +56,7 @@
 .cardConDarkMode {
   background-color: hsl(209, 23%, 22%);
   box-shadow: 1px 1px 5px hsl(209, 23%, 22%);
+  overflow-y: auto;
 }
 
 .type {
